syntax = "proto3";

package post;

option go_package = "./pb";

message Post {
  string postId = 1;
  string userId = 2;
  string contents = 3;
}

message GetPostRequest { string postId = 1; }

message GetPostResponse {
    bool status = 1;
    Post data = 2;
    string message = 3;
}

message AddPostRequest {
    string userId = 1;
    string contents = 2;
}

service PostService {
    rpc GetPostById(GetPostRequest) returns (GetPostResponse) {}
    rpc AddPost(AddPostRequest) returns (GetPostResponse) {}
}